bin/release/log.txt
[1mmain.cpp:9:18: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'fu'[0m
    9 |     function f = fu[0m
      | [0;1;32m                 ^
[0m[1mmain.cpp:9:20: [0m[0;1;31merror: [0m[1mexpected ';' at end of declaration[0m
    9 |     function f = fu[0m
      | [0;1;32m                   ^
[0m      | [0;32m                   ;
[0m2 errors generated.
